installed third party packaged

--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/nKorous/randomEndpoint/issues"
   },
-  "homepage": "https://github.com/nKorous/randomEndpoint#readme"
+  "homepage": "https://github.com/nKorous/randomEndpoint#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "dateformat": "^3.0.3",
+    "express": "^4.16.3",
+    "moment": "^2.22.2"
+  }
 }
