--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Random endpoint of random things for testing purposes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nf start"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "cors": "^2.8.4",
     "dateformat": "^3.0.3",
     "express": "^4.16.3",
+    "foreman": "3.0.1",
     "moment": "^2.22.2"
   }
 }
