--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Random endpoint of random things for testing purposes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nf start"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
     "node": "8.11.2"
