--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.16.3",
     "foreman": "3.0.1",
     "moment": "^2.22.2",
-    "pm2": "3.0.0"
+    "pg": "7.4.3",
+    "pm2": "3.0.0",
+    "psql": "0.0.1"
   }
 }
