--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "foreman": "3.0.1",
     "moment": "^2.22.2",
     "pg": "7.4.3",
+    "pg-connection-string": "2.0.0",
     "pm2": "3.0.0",
     "psql": "0.0.1"
   }
